@@ -494,4 +494,8 @@ verilog/inc1.v:300: EXP: This is fooed_2
 verilog/inc1.v:301: This is fooed_2
 verilog/inc1.v:302: 
 verilog/inc1.v:303: //======================================================================
-verilog/inc1.v:304: `line 304 "verilog/inc1.v" 2
+verilog/inc1.v:304:  
+verilog/inc1.v:305: np
+verilog/inc1.v:306: np
+verilog/inc1.v:307: //======================================================================
+verilog/inc1.v:308: `line 308 "verilog/inc1.v" 2
