@@ -299,3 +299,7 @@ EXP: This is fooed_2
 `def_fooed_2
 
 //======================================================================
+`define NOPARAM() np
+`NOPARAM()
+`NOPARAM( )
+//======================================================================
