@@ -13,6 +13,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix "parser thinks ending" error on unions, bug202. [Rick Ramus]
 
+****	Fix `defines with empty argument lists.
+
 * Verilog::Language 3.230 2010/01/21
 
 **	Support interface modports, bug200.  [by Thriller Wu]
